fixing overflow width

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 html {
     overflow-x: hidden;
+    width: 100vw;
 }
 
 @font-face {
